# ShazLite

./: .env.example  .gitignore  DEPLOYMENT.md  Dockerfile  Makefile  README.md  add_songs_to_db.py  audio_fingerprinting.db  batch_upload.py  check_tables.py  create_database_schema.py  create_db_user.sql  create_sample_fingerprints.py  debug_matching.py  docker-compose.dev.yml  docker-compose.yml  generate_fingerprint_sql.py  generate_real_fingerprints.py  init_simple_db.py  insert_songs.sql  load_real_songs.py  migrate_existing_data.py  pyproject.toml  real_fingerprint_generator.py  real_fingerprints.sql  requirements.txt  test_api_response.py  test_db_connection.py  test_matching.py  test_server.py  test_simple_query.py  update_audio_user_password.sql  upload_song.py
.kiro/specs/audio-fingerprinting/: design.md  requirements.md  tasks.md
.qtcreator/Python_3_12_64_bit_venv/: pyvenv.cfg
.qtcreator/Python_3_12_64_bit_venv/Scripts/: activate  activate.bat
audio_engine/: CMakeLists.txt  __init__.py  build_script.bat  example_usage.py  fingerprint_api.py  run_unit_tests.py  setup.py  test_api.py  test_build.py  test_unit.py
audio_engine/include/: .gitkeep  audio_preprocessor.h  audio_types.h  fft_processor.h  hash_generator.h  peak_detector.h
audio_engine/src/: .gitkeep  audio_preprocessor.cpp  audio_processor.cpp  fft_processor.cpp  hash_generator.cpp  peak_detector.cpp  python_bindings.cpp
backend/: __init__.py  test_integration.py
backend/api/: __init__.py  config.py  exceptions.py  main.py  middleware.py  models.py  server.py  test_admin.py  test_core.py  test_identification.py  test_identification_simple.py  test_integration.py  test_performance_monitoring.py
backend/api/routes/: __init__.py  admin.py  identification.py
backend/database/: __init__.py  connection.py  migration_runner.py  models.py  population_utils.py  repositories.py  schema.sql  test_integration.py
backend/database/migrations/: 001_initial_schema.sql
backend/interfaces/: __init__.py  audio_processor.py  database.py
backend/models/: __init__.py  audio.py  match.py  song.py
backend/services/: audio_fingerprint_service.py
client/: API_CLIENT_IMPLEMENTATION.md  AUDIO_RECORDING_IMPLEMENTATION.md  BUILD_SUCCESS_REPORT.md  CMakeLists.txt  DEPLOYMENT_SUCCESS.md  Info.plist.in  QT6_INSTALLATION_GUIDE.md  README.md  RESULTS_DISPLAY_IMPLEMENTATION.md  TESTING.md  build.bat  build.sh  package.json  run_tests.bat  run_tests.sh  test_simple.qml  verify_setup.py
client/public/: .gitkeep
client/qml/: Main.qml  RecordingView.qml  ResultsView.qml
client/qml/components/: ConfidenceIndicator.qml  ErrorDisplay.qml  LoadingIndicator.qml  ProcessingAnimation.qml  RecordButton.qml
client/src/: .gitkeep  apiclient.cpp  apiclient.h  apiclient_demo.cpp  audiorecorder.cpp  audiorecorder.h  main.cpp  main_simple.cpp  test_apiclient.cpp  test_apiclient_extended.cpp  test_audiorecorder.cpp  test_qml_components.cpp
database/init/: 01-init-database.sql
database/migrations/: .gitkeep
database/seeds/: .gitkeep  sample_songs.py
monitoring/: README.md  database_optimizer.py  monitoring_dashboard.py  performance_profiler.py  system_monitor.py
nginx/: nginx.conf
nginx/conf.d/: default.conf
scripts/: deploy.bat  deploy.sh  setup-production.sh
tests/: __init__.py  conftest.py  pytest.ini  run_e2e_tests.py  test_end_to_end.py  test_performance.py
